Added *.util.config package